add FUSE_SDK_PATH and memfs.h

--- a/usr_fuse_memfs/Makefile
+++ b/usr_fuse_memfs/Makefile
@@ -1,2 +1,4 @@
+FUSE_SDK_PATH="/root/fuse/install"
+
 all:
-	gcc memfs.c -I ../install/include/ ../install/lib/libfuse.a  -D_FILE_OFFSET_BITS=64 -o memfs -lpthread -ldl -lrt
+	gcc memfs.c -I $(FUSE_SDK_PATH)/include/ $(FUSE_SDK_PATH)/lib/libfuse.a  -D_FILE_OFFSET_BITS=64 -o memfs -lpthread -ldl -lrt
